samples/_failures_safe/1761430606_0063ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd8da0ed.c: In function ‘main’:
./samples/SAFE/__tmp_bd8da0ed.c:134:12: error: missing terminating " character
  134 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_bd8da0ed.c:134:5: error: expected expression at end of input
  134 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_bd8da0ed.c:134:5: error: expected declaration or statement at end of input
